[package]
name = "voxcrawler"
authors = ["belbeeno"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
chrono = "0.4.19"
mysql = "*"
regex = "1.5.4"
reqwest = { version = "0.11.9", features = ["blocking"] }
